--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 </head>
 <body>
 
-  <!-- Custom cursor -->
-  <div class="cursor" id="cursor"></div>
-  <div class="cursor-ring" id="cursorRing"></div>
+
 
   <!-- Accent line -->
   <div class="accent-line"></div>
@@ -78,13 +76,7 @@
     <div class="hero-visual">
       <div class="photo-wrap">
         <div class="photo-frame-inner">
-          <div class="photo-placeholder">
-            <svg width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1">
-              <circle cx="12" cy="8" r="4"/><path d="M4 20c0-4 3.6-7 8-7s8 3 8 7"/>
-            </svg>
-            <p>Photo d'Édouard</p>
-            <p>Media/photo.jpg</p>
-          </div>
+          <img src="Image/hero.jpg" alt="TOUDJI Kokouvi Édouard" loading="eager">
         </div>
       </div>
       <p class="photo-caption">GMP — ESIG Global Success · Lomé, Togo</p>
